# myTomorrows-be

./: .pre-commit-config.yaml  README.md  serverless.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml  start.sh
backend/api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_auto_20241012_1310.py
backend/api/test/: factories.py  tests.py
backend/app/: settings.py  urls.py
